--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "formik": "^2.4.3",
+    "nodemon": "^3.0.1",
+    "react-router-dom": "^6.15.0",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "node api.js",
